# QPlayer

./: CMakeLists.txt  main.cpp
QPlayer/: QPlayer.cpp  QPlayer.h
